
Improved the positioning of derived (sum, average and level) columns
by calculating a relevant date.

Improved the assessment scores import by adding options for start
column and field separator.

Fix to update export to allow repeat of previous exports and to
export_students so that headers are not missed.

New MarkBook column type for text only comments.

Tiny to assessment profiles when auto column is an average.


Version ClaSS-1.0.16 release (2012/02/26)
-------------------------------------------

Register notices re-worked to use a div overlay and accept html content.

Reminder messages to tutors for incomplete registers.

Added a B for boarder flag to student tables.

Fixed the chechrowIndicator for yes/no radio boxes.

Buttons to switch between one day lesson attendance and daily
registration views.

The MarkBook chart option now offers a choice of template for
assessment profiles.

Fix to preserving the language choice after login.

Option to have live (default) or static enquiries numbers in the applications
table. Removed deprecated ATD applications code.



Version ClaSS-1.0.15 release (2012/02/16)
-------------------------------------------

New db table to log updates to student/guardian records.

InfoBook option to export a file of changed records only.

Simplified logic of POST vars for trsnport_route.

Improved report_comments to search across multiple yeargroups.

Function list_support_teachers added to list SEN/Support staff.

Comments option to share with SEN/Support staff.

New CFG option sitephonecode for the international dialling code of
home country.

Fix to transport edit and transport display.

Added a 'trigger' to email defined users for a specific comment
category.

SMS text sending now operates the same as email through the cron with
an event db table.

Change to the boarder field in info table: B value now set to code for
accomodation group or N if not a boarder.

Display individual boarder groups in the enrolments tables.
